--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@react-google-maps/api": "^2.20.3",
     "gsap": "^3.12.5",
     "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
