--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gsap": "^3.12.5",
     "next": "15.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
